--- a/.github/workflows/Build-font.yml
+++ b/.github/workflows/Build-font.yml
@@ -28,11 +28,14 @@ jobs:
         sudo apt update
         sudo apt install -y ttfautohint fontforge python3-fontforge
         sudo apt upgrade
+		 - name: Fonts info
+				run:		|
+					font_name=Fonts
 
-    - name: Build font
+    - name: Build iosevka font
       run: |
         npm install
-        npm run build -- ttf::Dyve
+        npm run build -- ttf::$font_name
 
     - name: Download font patcher
       run: |
@@ -42,7 +45,7 @@ jobs:
     - name: Patch fonts with Nerd Fonts
       run: |
         mkdir -p patched-fonts
-        for font in dist/Dyve/TTF/*.ttf; do
+        for font in dist/$font_name/TTF/*.ttf; do
           echo "Patching $font"
           fontforge -script ./nerd-fonts/font-patcher \
             --complete \
@@ -55,13 +58,13 @@ jobs:
     - name: Upload original fonts
       uses: actions/upload-artifact@v4
       with:
-        name: Dyve-fonts-original
-        path: dist/Dyve
+        name: $font_name-fonts-original
+        path: dist/$font_name
         retention-days: 7
 
     - name: Upload patched fonts
       uses: actions/upload-artifact@v4
       with:
-        name: Dyve-nerd-fonts
+        name: $font_name-nerd-fonts
         path: patched-fonts
         retention-days: 7
