--- a/.github/workflows/Build-font.yml
+++ b/.github/workflows/Build-font.yml
@@ -5,8 +5,8 @@ on:
     inputs:
       font_variant:
         required: true
-        default: "Default"
         type: string
+        default: "Default"
 
   workflow_dispatch:
     inputs:
@@ -18,88 +18,91 @@ on:
           - Default
           - Iosevka
           - MPlus
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-      uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-    - name: Install required packages
-      run: |
-        sudo apt update
-        sudo apt install -y ttfautohint fontforge python3-fontforge
-        sudo apt upgrade
+      - name: Install required packages
+        run: |
+          sudo apt update
+          sudo apt install -y ttfautohint fontforge python3-fontforge unzip curl
+          sudo apt upgrade -y
 
-    - name: Fonts options
-      run: |
-        if [[ "${{ inputs.font_variant }}" == "Iosevka" ]]; then
-          font_name=Dyve
-          font_path="Iosevka/dist/$font_name/TTF/*[Rr]egular*"
-          git clone --depth 1 https://github.com/be5invis/Iosevka.git
-          ln -s $PWD/private-build-plans.toml $PWD/Iosevka
-        elif [[ "${{ inputs.font_variant }}" == "Default" ]]; then
-          font_name=Fonts
-          font_path="Fonts/*"
-        elif [[ "${{ inputs.font_variant }}" == "MPlus" ]]; then
-          font_name=MPlus
-          mkdir MPlus
-          curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin50-Regular.ttf --output MPlus/MplusCodeLatin50-Regular.ttf
-          curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin60-Regular.ttf --output MPlus/MplusCodeLatin60-Regular.ttf
-          font_path="MPlus/*.ttf"
-        else
-          echo "Something wrong happened"
-          exit 1
-        fi
-        echo "font_name=$font_name" >> $GITHUB_ENV
-        echo "font_path=$font_path" >> $GITHUB_ENV
+      - name: Configure font variant
+        run: |
+          set -e
+          case "${{ inputs.font_variant }}" in
+            Iosevka)
+              font_name="Dyve"
+              font_path="Iosevka/dist/${font_name}/TTF/*[Rr]egular*"
+              git clone --depth 1 https://github.com/be5invis/Iosevka.git
+              ln -s "$PWD/private-build-plans.toml" "$PWD/Iosevka"
+              ;;
+            Default)
+              font_name="Fonts"
+              font_path="Fonts/*"
+              ;;
+            MPlus)
+              font_name="MPlus"
+              mkdir -p MPlus
+              curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin50-Regular.ttf -o MPlus/MplusCodeLatin50-Regular.ttf
+              curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin60-Regular.ttf -o MPlus/MplusCodeLatin60-Regular.ttf
+              font_path="MPlus/*.ttf"
+              ;;
+            *)
+              echo "Invalid font variant: ${{ inputs.font_variant }}"
+              exit 1
+              ;;
+          esac
+          echo "font_name=$font_name" >> $GITHUB_ENV
+          echo "font_path=$font_path" >> $GITHUB_ENV
 
-    - name: Download font patcher
-      run: |
-        echo $PWD
-        curl -L https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FontPatcher.zip --output FontPatcher.zip
-        unzip FontPatcher.zip -d nerd-fonts
+      - name: Download Nerd Fonts Font Patcher
+        run: |
+          curl -L https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FontPatcher.zip -o FontPatcher.zip
+          unzip FontPatcher.zip -d nerd-fonts
 
-    - name: Build iosevka font
-      run: |
-        if [[ "${{ inputs.font_variant }}" == "Iosevka" ]]; then
+      - name: Build Iosevka font (if selected)
+        if: inputs.font_variant == 'Iosevka'
+        run: |
           cd Iosevka
           npm install
           npm run build -- ttf::$font_name
           cd ..
-        else
-          echo "Not building Iosevka font"
-        fi
 
-    - name: Patch fonts with Nerd Fonts
-      run: |
-        mkdir -p patched-fonts
-        for font in ${font_path}; do
-          echo "Patching $font"
-          fontforge -script ./nerd-fonts/font-patcher \
-            --complete \
-            --careful \
-            --progressbars \
-            --outputdir "patched-fonts" \
-            "$font"
-        done
-      
-    - name: Upload original fonts
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.font_name }}-fonts-original
-        path: ${{ inputs.font_variant == 'Iosevka' && format('Iosevka/dist/{0}', env.font_name) || env.font_name }}
-        retention-days: 7
+      - name: Patch fonts with Nerd Fonts
+        run: |
+          mkdir -p patched-fonts
+          for font in ${font_path}; do
+            echo "Patching $font"
+            fontforge -script ./nerd-fonts/font-patcher \
+              --complete \
+              --careful \
+              --progressbars \
+              --outputdir "patched-fonts" \
+              "$font"
+          done
 
-    - name: Upload patched fonts
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.font_name }}-nerd-fonts
-        path: patched-fonts
-        retention-days: 7
+      - name: Upload original fonts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.font_name }}-fonts-original
+          path: ${{ inputs.font_variant == 'Iosevka' && format('Iosevka/dist/{0}', env.font_name) || env.font_name }}
+          retention-days: 7
+
+      - name: Upload patched fonts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.font_name }}-nerd-fonts
+          path: patched-fonts
+          retention-days: 7
