--- a/.github/workflows/Build-font.yml
+++ b/.github/workflows/Build-font.yml
@@ -55,8 +55,8 @@ jobs:
             MPlus)
               font_name="MPlus"
               mkdir -p MPlus
-              curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin50-Regular.ttf -o MPlus/MplusCodeLatin50-Regular.ttf
-              curl -L https://raw.githubusercontent.com/coz-m/MPLUS_FONTS/refs/heads/master/fonts/ttf/MplusCodeLatin60-Regular.ttf -o MPlus/MplusCodeLatin60-Regular.ttf
+              curl -L https://github.com/coz-m/MPLUS_FONTS/raw/refs/heads/master/fonts/otf/MplusCodeLatin50-Regular.otf -o MPlus/MplusCodeLatin50-Regular.ttf
+              curl -L https://github.com/coz-m/MPLUS_FONTS/raw/refs/heads/master/fonts/otf/MplusCodeLatin60-Regular.otf -o MPlus/MplusCodeLatin60-Regular.otf
               font_path="MPlus/*.ttf"
               ;;
             *)
